# date_time_parser_Slipushkina

./: Cargo.toml  README.md  example.txt  makefile
src/: lib.rs  main.rs
tests/: parser_tests.rs
